--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" href="/css/styles.css" rel="stylesheet">
     <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
+    <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
 </head>
 
 <body class="grey lighten-4">
@@ -105,7 +108,7 @@
             </div>
         </form>
     </div>
-
+    <script src="/js/app.js"></script>
     <script src="/js/ui.js"></script>
 </body>
 
