--- a/pages/fallback.html
+++ b/pages/fallback.html
@@ -42,12 +42,12 @@
   </ul>
 
   <!-- content -->
-  <div class="container grey-text">
-    <h5 class="center">About TomFood</h5>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus, porro voluptatum illum veniam eaque sunt sit
-      labore provident eligendi! Voluptate amet suscipit inventore unde maxime atque impedit officia nobis laboriosam!
-    </p>
+  <div class="container grey-text center">
+    <h5>OOPS!</h5>
+    <p>Currently you can't view this page without a connection.</p>
+    <a href="/" class="btn-small orange z-depth-0">Go to the Homepage</a>
   </div>
+
   <script src="/js/app.js"></script>
   <script src="/js/ui.js"></script>
 </body>
