--- a/pages/fallback.html
+++ b/pages/fallback.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>OOPS!</title>
 
   <link type="text/css" href="/css/materialize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,11 +12,10 @@
   <script type="text/javascript" src="/js/materialize.min.js"></script>
   <link rel="manifest" href="/manifest.json">
   <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
-  <meta name="apple-mobile-web-app-status-bar" content="#FFE1C4">
   <meta name="theme-color" content="#FFE1C4">
 </head>
 
-<body class="grey lighten-4">
+<body>
 
   <!-- top nav -->
   <nav class="z-depth-0">
@@ -32,7 +31,7 @@
   <ul id="side-menu" class="sidenav side-menu">
     <li><a class="subheader">TomFood</a></li>
     <li><a href="/" class="waves-effect">Home</a></li>
-    <li><a href="/pages/about.html" class="waves-effect">About</a></li>
+    <li><a href="/pages/inspiration.html" class="waves-effect">Inspiration</a></li>
     <li>
       <div class="divider"></div>
     </li>
@@ -41,12 +40,14 @@
     </li>
   </ul>
 
-  <!-- content -->
-  <div class="container grey-text center">
-    <h5>OOPS!</h5>
-    <p>Currently you can't view this page without a connection.</p>
-    <a href="/" class="btn-small orange z-depth-0">Go to the Homepage</a>
-  </div>
+  <main class="grey lighten-4">
+    <!-- content -->
+    <div class="container grey-text center">
+      <h5>OOPS!</h5>
+      <p>Currently you can't view this page without a connection.</p>
+      <a href="/" class="btn-small orange z-depth-0">Go to the Homepage</a>
+    </div>
+  </main>
 
   <script src="/js/app.js"></script>
   <script src="/js/ui.js"></script>
