--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TomFood</title>
-    
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
     <link type="text/css" href="/css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" href="/css/styles.css" rel="stylesheet">
@@ -13,65 +16,79 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
     <meta name="theme-color" content="#FFE1C4">
+
+    <link href="splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonexr_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonexsmax_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
 </head>
 
 <body>
-    <!-- top nav -->
-    <nav class="z-depth-0">
-        <div class="nav-wrapper container">
-            <a href="/">Tom<span>Food</span></a>
-            <span class="right grey-text text-darken-1">
-                <i class="material-icons sidenav-trigger" data-target="side-menu">menu</i>
-            </span>
-        </div>
-    </nav>
+    <div class="app">
+        <!-- top nav -->
+        <nav class="z-depth-0">
+            <div class="nav-wrapper container">
+                <a href="/">Tom<span>Food</span></a>
+                <span class="right grey-text text-darken-1">
+                    <i class="material-icons sidenav-trigger" data-target="side-menu">menu</i>
+                </span>
+            </div>
+        </nav>
 
-    <!-- side nav -->
-    <ul id="side-menu" class="sidenav side-menu">
-        <li><a class="subheader">TomFood</a></li>
-        <li><a href="/" class="waves-effect">Home</a></li>
-        <li><a href="/pages/inspiration.html" class="waves-effect">Inspiration</a></li>
-        <li>
-            <div class="divider"></div>
-        </li>
-        <li><a href="/pages/contact.html" class="waves-effect">
-                <i class="material-icons">mail_outline</i>Contact</a>
-        </li>
-    </ul>
-
-    <main class="grey lighten-4">
-
-        <!-- recipes -->
-        <div class="recipes container grey-text text-darken-1">
-
-        </div>
-
-        <div class="center">
-            <a class="btn-floating btn-small btn-large add-btn sidenav-trigger" data-target="side-form">
-                <i class="material-icons">add</i>
-            </a>
-        </div>
-
-        <!-- add recipe side nav -->
-        <div id="side-form" class="sidenav side-form">
-            <form class="add-recipe container section">
-                <h6>New Recipe</h6>
+        <!-- side nav -->
+        <ul id="side-menu" class="sidenav side-menu">
+            <li><a class="subheader">TomFood</a></li>
+            <li><a href="/" class="waves-effect">Home</a></li>
+            <li><a href="/pages/inspiration.html" class="waves-effect">Inspiration</a></li>
+            <li>
                 <div class="divider"></div>
-                <div class="input-field">
-                    <input placeholder="e.g. Garlic soup" id="title" type="text" class="validate">
-                    <label for="title">Recipe Title</label>
-                </div>
-                <div class="input-field">
-                    <input placeholder="e.g. Tofu, mushroom, garlic" id="ingredients" type="text" class="validate">
-                    <label for="ingredients">Ingredients</label>
-                </div>
-                <div class="input-field center">
-                    <button class="btn-small">Add</button>
-                </div>
-            </form>
-        </div>
+            </li>
+            <li>
+                <a href="/pages/contact.html" class="waves-effect">
+                    <i class="material-icons">mail_outline</i>Contact</a>
+            </li>
+        </ul>
 
-    </main>
+        <main class="grey lighten-4">
+
+            <!-- recipes -->
+            <div class="recipes container grey-text text-darken-1">
+
+            </div>
+
+            <div class="center">
+                <a class="btn-floating btn-small btn-large add-btn sidenav-trigger" data-target="side-form">
+                    <i class="material-icons">add</i>
+                </a>
+            </div>
+
+            <!-- add recipe side nav -->
+            <div id="side-form" class="sidenav side-form">
+                <form class="add-recipe container section">
+                    <h6>New Recipe</h6>
+                    <div class="divider"></div>
+                    <div class="input-field">
+                        <input placeholder="e.g. Garlic soup" id="title" type="text" class="validate">
+                        <label for="title">Recipe Title</label>
+                    </div>
+                    <div class="input-field">
+                        <input placeholder="e.g. Tofu, mushroom, garlic" id="ingredients" type="text" class="validate">
+                        <label for="ingredients">Ingredients</label>
+                    </div>
+                    <div class="input-field center">
+                        <button class="btn-small">Add</button>
+                    </div>
+                </form>
+            </div>
+
+        </main>
+    </div>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-app.js"></script>
