--- a/pages/fallback.html
+++ b/pages/fallback.html
@@ -1,56 +1,71 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>OOPS!</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>OOPS!</title>
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <link type="text/css" href="/css/materialize.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link type="text/css" href="/css/styles.css" rel="stylesheet">
-  <script type="text/javascript" src="/js/materialize.min.js"></script>
-  <link rel="manifest" href="/manifest.json">
-  <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
-  <meta name="theme-color" content="#FFE1C4">
+    <link type="text/css" href="/css/materialize.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" href="/css/styles.css" rel="stylesheet">
+    <script type="text/javascript" src="/js/materialize.min.js"></script>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
+    <meta name="theme-color" content="#FFE1C4">
+
+    <link href="splashscreens/iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphoneplus_splash.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonex_splash.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonexr_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/iphonexsmax_splash.png" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipad_splash.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+    <link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
 </head>
 
 <body>
+    <div class="app">
+        <!-- top nav -->
+        <nav class="z-depth-0">
+            <div class="nav-wrapper container">
+                <a href="/">Tom<span>Food</span></a>
+                <span class="right grey-text text-darken-1">
+          <i class="material-icons sidenav-trigger" data-target="side-menu">menu</i>
+        </span>
+            </div>
+        </nav>
 
-  <!-- top nav -->
-  <nav class="z-depth-0">
-    <div class="nav-wrapper container">
-      <a href="/">Tom<span>Food</span></a>
-      <span class="right grey-text text-darken-1">
-        <i class="material-icons sidenav-trigger" data-target="side-menu">menu</i>
-      </span>
-    </div>
-  </nav>
+        <!-- side nav -->
+        <ul id="side-menu" class="sidenav side-menu">
+            <li><a class="subheader">TomFood</a></li>
+            <li><a href="/" class="waves-effect">Home</a></li>
+            <li><a href="/pages/inspiration.html" class="waves-effect">Inspiration</a></li>
+            <li>
+                <div class="divider"></div>
+            </li>
+            <li>
+                <a href="/pages/contact.html" class="waves-effect">
+                    <i class="material-icons">mail_outline</i>Contact</a>
+            </li>
+        </ul>
 
-  <!-- side nav -->
-  <ul id="side-menu" class="sidenav side-menu">
-    <li><a class="subheader">TomFood</a></li>
-    <li><a href="/" class="waves-effect">Home</a></li>
-    <li><a href="/pages/inspiration.html" class="waves-effect">Inspiration</a></li>
-    <li>
-      <div class="divider"></div>
-    </li>
-    <li><a href="/pages/contact.html" class="waves-effect">
-        <i class="material-icons">mail_outline</i>Contact</a>
-    </li>
-  </ul>
-
-  <main class="grey lighten-4">
-    <!-- content -->
-    <div class="container grey-text center">
-      <h5>OOPS!</h5>
-      <p>Currently you can't view this page without a connection.</p>
-      <a href="/" class="btn-small orange z-depth-0">Go to the Homepage</a>
-    </div>
-  </main>
-
-  <script src="/js/app.js"></script>
-  <script src="/js/ui.js"></script>
+        <main class="grey lighten-4">
+            <!-- content -->
+            <div class="container grey-text center">
+                <h5>OOPS!</h5>
+                <p>Currently you can't view this page without a connection.</p>
+                <a href="/" class="btn-small orange z-depth-0">Go to the Homepage</a>
+            </div>
+        </main>
+    </div>,
+    <script src="/js/app.js"></script>
+    <script src="/js/ui.js"></script>
 </body>
 
 </html>
